# funnybirds-framework

./: evaluate_explainability.py  pyproject.toml  train.py
funnybirds/: evaluation_protocols.py  run.py
funnybirds/datasets/: funny_birds.py
funnybirds/explainers/: explainer_wrapper.py
funnybirds/models/: __init__.py
src/: __main__.py  evaluation_protocols.py
src/datasets/: funny_birds.py
src/explainers/: explainer_wrapper.py
