[project]
name = "funnybirds"
version = "1.0.0"

readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "requests",
]
[tool.setuptools]
py-modules = ["funnybirds"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"